[metadata]
name = PSRpy
version = 0.5
description = "PSRpy - A Toolbox for Pulsar Science"
long_description = file: README.md

author = Emmanuel Fonseca
author_email = emmanuel.fonseca@mail.wvu.edu
keywords = pulsar, timing, orbital motion, dispersion measure, data
maintainer = Emmanuel Fonseca
maintainer_email = emmanuel.fonseca@mail.wvu.edu
url = https://github.com/emmanuelfonseca/PSRpy
project_urls:
    Source = https://github.com/emmanuelfonseca/PSRpy
    Tracker = https://github.com/emmanuelfonseca/PSRpy/issues

[options]
python_requires = >=3.7
include_package_data = True
install_requires = 
    astropy>=4.0
    numpy>=1.17
    matplotlib>=3.1
    PyWavelets>=1.1
    PyYAML>=5.3.1
packages = find:
scripts = 
    PSRpy/bin/compute_Shapiro_pdfs.py
    PSRpy/bin/compute_grid_position.py
    PSRpy/bin/compute_grid_Shapiro.py
    PSRpy/bin/compute_orbital_phase_epochs.py
    PSRpy/bin/fit_orbit.py
    PSRpy/bin/generate_fake_toas.py
    PSRpy/bin/plot_residuals.py
    
[options.package_data]
* = *.yaml 
